--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>DR DIAMOND</title>
+    <title>DR DIAMOND EXCHANGE</title>
     
     <!-- Meta Pixel Code -->
     <script>
