--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,18 @@
       <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=789789962996046&ev=PageView&noscript=1" />
     </noscript>
     <!-- End Meta Pixel Code -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H7E2F66XTC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H7E2F66XTC');
+</script>
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
