--- a/public/index.html
+++ b/public/index.html
@@ -39,13 +39,13 @@
     <!-- End Meta Pixel Code -->
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-H7E2F66XTC"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DYVT3R2XSV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-H7E2F66XTC');
+  gtag('config', 'G-DYVT3R2XSV');
 </script>
 
 
